--- a/userpage.html
+++ b/userpage.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="addItem">
-        <button onclick="location.href='loginpage.html'">Logout</button>
+        <button onclick="location.href='index.html'" >Logout</button>
     </div>
 
     <script>
